[gd_scene load_steps=14 format=3 uid="uid://dvrt2nk5b5oi7"]

[ext_resource type="Script" uid="uid://d4fiea5m5kgmh" path="res://objects/scripts/cheese.gd" id="1_a5xy8"]
[ext_resource type="Texture2D" uid="uid://d1j08xltam68a" path="res://assets/objects/cheese.png" id="1_o2umf"]
[ext_resource type="Material" uid="uid://u6w6f23thwrw" path="res://shaders/basic_outline.tres" id="2_1jo43"]
[ext_resource type="PackedScene" uid="uid://d0vxr4jg6hndo" path="res://objects/persistent_data_handler.tscn" id="3_7ctu6"]
[ext_resource type="Texture2D" uid="uid://hnjeultrwo0s" path="res://assets/ui/got_cheese.png" id="5_ebjcb"]
[ext_resource type="Texture2D" uid="uid://dgngxynvhbm38" path="res://assets/ui/cheese_action.png" id="6_0vi0v"]
[ext_resource type="FontVariation" uid="uid://c1lna6xvakjow" path="res://UI/themes/bold_type.tres" id="6_d4vx1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a5xy8"]
radius = 50.0

[sub_resource type="Animation" id="Animation_1jo43"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_0vi0v"]
resource_name = "collect"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -315)]
}

[sub_resource type="Animation" id="Animation_7ctu6"]
resource_name = "float"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 16), Vector2(0, -16), Vector2(0, 16)]
}

[sub_resource type="Animation" id="Animation_d4vx1"]
resource_name = "appear"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.6),
"transitions": PackedFloat32Array(0.297302, 2.82843, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -96), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.566667),
"transitions": PackedFloat32Array(0.554785, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ebjcb"]
_data = {
&"RESET": SubResource("Animation_1jo43"),
&"appear": SubResource("Animation_d4vx1"),
&"collect": SubResource("Animation_0vi0v"),
&"float": SubResource("Animation_7ctu6")
}

[node name="Cheese" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_a5xy8")

[node name="Sprite" type="Sprite2D" parent="."]
z_index = 4
material = ExtResource("2_1jo43")
texture = ExtResource("1_o2umf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_a5xy8")

[node name="IsCollected" parent="." instance=ExtResource("3_7ctu6")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ebjcb")
}

[node name="Popup" type="Node2D" parent="."]
position = Vector2(0, -60)

[node name="GotCheese" type="Sprite2D" parent="Popup"]
z_index = 4
position = Vector2(-2.00001, -483)
scale = Vector2(2.0061, 2.0061)
texture = ExtResource("5_ebjcb")

[node name="CheeseNameText" type="RichTextLabel" parent="Popup"]
z_index = 4
offset_left = -441.0
offset_top = 296.0
offset_right = 445.0
offset_bottom = 462.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/normal_font = ExtResource("6_d4vx1")
theme_override_font_sizes/normal_font_size = 116
text = "cheese space"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="ActionLines" type="Sprite2D" parent="Popup"]
z_index = 1
position = Vector2(-0.999977, -2.5)
scale = Vector2(1.92391, 1.92767)
texture = ExtResource("6_0vi0v")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
